--- a/wordEmbedding.ipynb
+++ b/wordEmbedding.ipynb
@@ -5,9 +5,7 @@
    "metadata": {},
    "source": [
     "## Word Embedding\n",
-    "---\n",
-    "\n",
-    "#### Dataframe creation from pdf"
+    "---\n"
    ]
   },
   {
@@ -16,11 +14,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import\n",
     "import pandas as pd\n",
     "import PyPDF2\n",
     "\n",
-    "pdfFileObj = open('20221118-FULL.pdf', 'rb')\n",
-    "pdfReader = PyPDF2.PdfFileReader(pdfFileObj)"
+    "pdfFileObj = open('20221118-FULL.pdf', 'rb') #Create pdf object\n",
+    "pdfReader = PyPDF2.PdfFileReader(pdfFileObj) "
    ]
   },
   {
@@ -30,10 +29,10 @@
    "outputs": [],
    "source": [
     "allText = \"\"\n",
-    "for i in range(100):\n",
+    "for i in range(100): #Iterating over n pages \n",
     "    pageObj = pdfReader.getPage(i)\n",
     "    page = pageObj.extractText()\n",
-    "    allText += page\n",
+    "    allText += page #Store page content into string variable\n",
     "\n",
     "allText;"
    ]
@@ -7557,7 +7556,7 @@
    "source": [
     "# Create dataframe\n",
     "dbn_df = pd.DataFrame([sub.split(\";\") for sub in testListSplit])\n",
-    "dbn_df.head(20)"
+    "dbn_df.head()"
    ]
   }
  ],
