--- a/wordEmbedding.ipynb
+++ b/wordEmbedding.ipynb
@@ -7771,18 +7771,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 207,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (326599420.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [196]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(sentences)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating Word2Vec\n",
     "model = Word2Vec(\n",
@@ -7791,40 +7782,68 @@
     "    window = 10,\n",
     "    #iter = 20,\n",
     "    \n",
-    ")\n"
+    ")\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hi = model.wv\n",
-    "for i in hi:\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"Key 'house' not present in vocabulary\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\DELSTEI9\\OneDrive - EY\\Documents\\GitHub\\fuzzy_sanctions\\wordEmbedding.ipynb Cell 20\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/DELSTEI9/OneDrive%20-%20EY/Documents/GitHub/fuzzy_sanctions/wordEmbedding.ipynb#X51sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m x \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mhouse\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/DELSTEI9/OneDrive%20-%20EY/Documents/GitHub/fuzzy_sanctions/wordEmbedding.ipynb#X51sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m ergebnisse \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mwv\u001b[39m.\u001b[39;49mmost_similar(x, topn\u001b[39m=\u001b[39;49m\u001b[39m5\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/DELSTEI9/OneDrive%20-%20EY/Documents/GitHub/fuzzy_sanctions/wordEmbedding.ipynb#X51sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m y \u001b[39min\u001b[39;00m ergebnisse:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/DELSTEI9/OneDrive%20-%20EY/Documents/GitHub/fuzzy_sanctions/wordEmbedding.ipynb#X51sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mprint\u001b[39m(y)\n",
-      "File \u001b[1;32mc:\\Users\\DELSTEI9\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\gensim\\models\\keyedvectors.py:842\u001b[0m, in \u001b[0;36mKeyedVectors.most_similar\u001b[1;34m(self, positive, negative, topn, clip_start, clip_end, restrict_vocab, indexer)\u001b[0m\n\u001b[0;32m    839\u001b[0m         weight[idx] \u001b[39m=\u001b[39m item[\u001b[39m1\u001b[39m]\n\u001b[0;32m    841\u001b[0m \u001b[39m# compute the weighted average of all keys\u001b[39;00m\n\u001b[1;32m--> 842\u001b[0m mean \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_mean_vector(keys, weight, pre_normalize\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, post_normalize\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, ignore_missing\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m    843\u001b[0m all_keys \u001b[39m=\u001b[39m [\n\u001b[0;32m    844\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_index(key) \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m keys \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, _KEY_TYPES) \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhas_index_for(key)\n\u001b[0;32m    845\u001b[0m ]\n\u001b[0;32m    847\u001b[0m \u001b[39mif\u001b[39;00m indexer \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(topn, \u001b[39mint\u001b[39m):\n",
-      "File \u001b[1;32mc:\\Users\\DELSTEI9\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\gensim\\models\\keyedvectors.py:519\u001b[0m, in \u001b[0;36mKeyedVectors.get_mean_vector\u001b[1;34m(self, keys, weights, pre_normalize, post_normalize, ignore_missing)\u001b[0m\n\u001b[0;32m    517\u001b[0m         total_weight \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mabs\u001b[39m(weights[idx])\n\u001b[0;32m    518\u001b[0m     \u001b[39melif\u001b[39;00m \u001b[39mnot\u001b[39;00m ignore_missing:\n\u001b[1;32m--> 519\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mKey \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m not present in vocabulary\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    521\u001b[0m \u001b[39mif\u001b[39;00m(total_weight \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m):\n\u001b[0;32m    522\u001b[0m     mean \u001b[39m=\u001b[39m mean \u001b[39m/\u001b[39m total_weight\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"Key 'house' not present in vocabulary\""
+     "data": {
+      "text/plain": [
+       "{' ': 0,\n",
+       " 'a': 1,\n",
+       " 'i': 2,\n",
+       " 'n': 3,\n",
+       " 'q': 4,\n",
+       " 'r': 5,\n",
+       " 'd': 6,\n",
+       " 'H': 7,\n",
+       " 'u': 8,\n",
+       " 'j': 9,\n",
+       " 'S': 10}"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.key_to_index #Ausgabe aller Key-Vektor Paare in Word2Vec model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('n', 0.0802016481757164)\n",
+      "('u', 0.04613630101084709)\n",
+      "('r', 0.0260942243039608)\n",
+      "('q', 0.011279567144811153)\n",
+      "(' ', 0.002328024012967944)\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "x = input('gib dein scheiß hier ein')\n",
+    "\n",
+    "ergebnisse = model.wv.most_similar(x, topn=5)\n",
+    "\n",
+    "for y in ergebnisse:\n",
+    "    print(y)"
+   ]
   }
  ],
  "metadata": {
