--- a/wordEmbedding.ipynb
+++ b/wordEmbedding.ipynb
@@ -1961,6 +1961,102 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using a pretrained Model for Word Embedding (Glove or Fastext)\n",
+    "  - Model Glove ( https://nlp.stanford.edu/projects/glove/)\n",
+    "  - Model FastText "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'the'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-63-55306a6aa88d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Load the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKeyedVectors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_word2vec_format\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglove_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/gensim/models/keyedvectors.py\u001b[0m in \u001b[0;36mload_word2vec_format\u001b[0;34m(cls, fname, fvocab, binary, encoding, unicode_errors, limit, datatype, no_header)\u001b[0m\n\u001b[1;32m   1717\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1718\u001b[0m         \"\"\"\n\u001b[0;32m-> 1719\u001b[0;31m         return _load_word2vec_format(\n\u001b[0m\u001b[1;32m   1720\u001b[0m             \u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfvocab\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfvocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbinary\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbinary\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0municode_errors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0municode_errors\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1721\u001b[0m             \u001b[0mlimit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlimit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatatype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdatatype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mno_header\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mno_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/gensim/models/keyedvectors.py\u001b[0m in \u001b[0;36m_load_word2vec_format\u001b[0;34m(cls, fname, fvocab, binary, encoding, unicode_errors, limit, datatype, no_header, binary_chunk_size)\u001b[0m\n\u001b[1;32m   2057\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2058\u001b[0m             \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_unicode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2059\u001b[0;31m             \u001b[0mvocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvector_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;31m# throws for invalid file format\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2060\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlimit\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2061\u001b[0m             \u001b[0mvocab_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlimit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/gensim/models/keyedvectors.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m   2057\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2058\u001b[0m             \u001b[0mheader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_unicode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2059\u001b[0;31m             \u001b[0mvocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvector_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m  \u001b[0;31m# throws for invalid file format\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2060\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlimit\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2061\u001b[0m             \u001b[0mvocab_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlimit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'the'"
+     ]
+    }
+   ],
+   "source": [
+    "from gensim.test.utils import datapath, get_tmpfile\n",
+    "from gensim.models import KeyedVectors\n",
+    "\n",
+    "# Download the model\n",
+    "glove_file = join('glove.6B.100d.txt')\n",
+    "tmp_file = get_tmpfile(\"test_word2vec.txt\")\n",
+    "\n",
+    "# Load the model\n",
+    "model = KeyedVectors.load_word2vec_format(glove_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.test.utils import datapath, get_tmpfile\n",
+    "from gensim.models import KeyedVectors\n",
+    "import numpy as np\n",
+    "import os\n",
+    "GLOVE_DIR = 'Path to directory containing glove txt file'\n",
+    "\n",
+    "embeddings_index = {}\n",
+    "f = open(os.path. join (GLOVE_DIR, 'glove.68.100d.txt'), encoding=\"utf8\")\n",
+    "for line in f:\n",
+    "    values = line.split()\n",
+    "    word = values [0]\n",
+    "    coefs = np.asarray(values [1:], dtype='float32')\n",
+    "    embeddings_index[word] = coefs\n",
+    "f. close ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate the word embedding for the word \"cat\"\n",
+    "word_embedding = model['cat']\n",
+    "\n",
+    "# Print the word embedding\n",
+    "print(word_embedding)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import spatial\n",
+    "\n",
+    "# Generate the word embeddings for the words \"cat\" and \"dog\"\n",
+    "word1_embedding = model['cat']\n",
+    "word2_embedding = model['dog']\n",
+    "\n",
+    "# Calculate the cosine similarity between the two word embeddings\n",
+    "similarity = 1 - spatial.distance.cosine(word1_embedding, word2_embedding)\n",
+    "\n",
+    "# Print the similarity\n",
+    "print(similarity)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -2063,266 +2159,6 @@
     "#     #     sentences_tokenized.append(tokens)\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data1 = []\n",
-    "# for i in dbn_df['Identity information']:\n",
-    "#     # temp = []\n",
-    "#     # for j in i:\n",
-    "#     #     temp.append(j.lower())\n",
-    "#     # data.append(temp)\n",
-    "#     data1.append(i.lower())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating Word2Vec\n",
-    "model = Word2Vec(\n",
-    "    sentences = n,\n",
-    "    #size = 50,\n",
-    "    window = 10,\n",
-    "    #iter = 20,\n",
-    "    \n",
-    ")\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'.': 0,\n",
-       " 'a': 1,\n",
-       " 'n': 2,\n",
-       " 'i': 3,\n",
-       " 'e': 4,\n",
-       " 'r': 5,\n",
-       " 'o': 6,\n",
-       " ';': 7,\n",
-       " 't': 8,\n",
-       " 'A': 9,\n",
-       " 'l': 10,\n",
-       " 'd': 11,\n",
-       " 'm': 12,\n",
-       " 's': 13,\n",
-       " 'h': 14,\n",
-       " '\\\\': 15,\n",
-       " '2': 16,\n",
-       " '1': 17,\n",
-       " 'M': 18,\n",
-       " 'u': 19,\n",
-       " '3': 20,\n",
-       " 'S': 21,\n",
-       " 'c': 22,\n",
-       " 'I': 23,\n",
-       " 'v': 24,\n",
-       " 'f': 25,\n",
-       " ':': 26,\n",
-       " 'O': 27,\n",
-       " 'и': 28,\n",
-       " 'R': 29,\n",
-       " 'j': 30,\n",
-       " 'V': 31,\n",
-       " 'k': 32,\n",
-       " '4': 33,\n",
-       " '5': 34,\n",
-       " 'K': 35,\n",
-       " 'а': 36,\n",
-       " 'N': 37,\n",
-       " 'H': 38,\n",
-       " '6': 39,\n",
-       " 'C': 40,\n",
-       " '0': 41,\n",
-       " '9': 42,\n",
-       " 'b': 43,\n",
-       " '8': 44,\n",
-       " '7': 45,\n",
-       " 'E': 46,\n",
-       " 'y': 47,\n",
-       " 'T': 48,\n",
-       " 'g': 49,\n",
-       " 'е': 50,\n",
-       " 'D': 51,\n",
-       " 'L': 52,\n",
-       " 'B': 53,\n",
-       " 'в': 54,\n",
-       " 'р': 55,\n",
-       " 'А': 56,\n",
-       " 'л': 57,\n",
-       " 'о': 58,\n",
-       " 'н': 59,\n",
-       " 'В': 60,\n",
-       " 'G': 61,\n",
-       " 'J': 62,\n",
-       " 'U': 63,\n",
-       " 'F': 64,\n",
-       " 'О': 65,\n",
-       " '-': 66,\n",
-       " 'ч': 67,\n",
-       " 'P': 68,\n",
-       " 'Y': 69,\n",
-       " 'Н': 70,\n",
-       " 'д': 71,\n",
-       " 'к': 72,\n",
-       " 'И': 73,\n",
-       " 'й': 74,\n",
-       " 'К': 75,\n",
-       " 'z': 76,\n",
-       " 'Е': 77,\n",
-       " 'Z': 78,\n",
-       " 'с': 79,\n",
-       " 'т': 80,\n",
-       " 'С': 81,\n",
-       " 'p': 82,\n",
-       " 'w': 83,\n",
-       " ',': 84,\n",
-       " 'Р': 85,\n",
-       " 'м': 86,\n",
-       " 'г': 87,\n",
-       " 'Л': 88,\n",
-       " 'М': 89,\n",
-       " 'ь': 90,\n",
-       " 'ا': 91,\n",
-       " 'q': 92,\n",
-       " 'П': 93,\n",
-       " 'Д': 94,\n",
-       " 'Т': 95,\n",
-       " 'Г': 96,\n",
-       " 'Б': 97,\n",
-       " 'x': 98,\n",
-       " 'ل': 99,\n",
-       " 'У': 100,\n",
-       " '(': 101,\n",
-       " 'م': 102,\n",
-       " 'W': 103,\n",
-       " 'і': 104,\n",
-       " 'я': 105,\n",
-       " \"'\": 106,\n",
-       " 'Ю': 107,\n",
-       " 'Q': 108,\n",
-       " 'ي': 109,\n",
-       " 'ر': 110,\n",
-       " 'د': 111,\n",
-       " 'х': 112,\n",
-       " 'ح': 113,\n",
-       " 'س': 114,\n",
-       " 'ن': 115,\n",
-       " 'Ч': 116,\n",
-       " 'و': 117,\n",
-       " 'Я': 118,\n",
-       " 'Ш': 119,\n",
-       " 'З': 120,\n",
-       " 'Й': 121,\n",
-       " 'у': 122,\n",
-       " '’': 123,\n",
-       " 'Х': 124,\n",
-       " 'ع': 125,\n",
-       " 'Ь': 126,\n",
-       " 'ب': 127,\n",
-       " 'б': 128,\n",
-       " 'Ф': 129,\n",
-       " 'ی': 130,\n",
-       " 'ف': 131,\n",
-       " 'з': 132,\n",
-       " ')': 133,\n",
-       " 'Ы': 134,\n",
-       " 'é': 135,\n",
-       " 'Ц': 136,\n",
-       " 'І': 137,\n",
-       " 'ه': 138,\n",
-       " 'ز': 139,\n",
-       " 'Ж': 140,\n",
-       " 'ص': 141,\n",
-       " 'ط': 142,\n",
-       " 'Á': 143,\n",
-       " '‘': 144,\n",
-       " 'ش': 145,\n",
-       " 'č': 146,\n",
-       " 'ج': 147,\n",
-       " 'ق': 148,\n",
-       " 'أ': 149,\n",
-       " 'ы': 150,\n",
-       " 'ё': 151,\n",
-       " 'п': 152,\n",
-       " 'Э': 153,\n",
-       " 'ت': 154,\n",
-       " 'Ё': 155,\n",
-       " 'ю': 156,\n",
-       " 'ك': 157,\n",
-       " 'ф': 158,\n",
-       " 'خ': 159,\n",
-       " 'X': 160,\n",
-       " 'Í': 161,\n",
-       " 'ة': 162,\n",
-       " 'ض': 163,\n",
-       " 'ж': 164,\n",
-       " 'ї': 165,\n",
-       " '김': 166,\n",
-       " 'غ': 167,\n",
-       " 'É': 168,\n",
-       " 'ц': 169,\n",
-       " 'Є': 170,\n",
-       " 'Ó': 171,\n",
-       " '“': 172,\n",
-       " 'Щ': 173,\n",
-       " '́': 174,\n",
-       " '수': 175,\n",
-       " '‐': 176,\n",
-       " 'ў': 177,\n",
-       " '경': 178,\n",
-       " 'ó': 179,\n",
-       " '박': 180,\n",
-       " 'Ў': 181}"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.wv.key_to_index #Ausgabe aller Key-Vektor Paare in Word2Vec model\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "\"Key 'pimmel' not present in vocabulary\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-113-778599fc2784>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mergebnisse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmost_similar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mergebnisse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/gensim/models/keyedvectors.py\u001b[0m in \u001b[0;36mmost_similar\u001b[0;34m(self, positive, negative, topn, clip_start, clip_end, restrict_vocab, indexer)\u001b[0m\n\u001b[1;32m    839\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    840\u001b[0m         \u001b[0;31m# compute the weighted average of all keys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 841\u001b[0;31m         \u001b[0mmean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_mean_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpre_normalize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpost_normalize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_missing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    842\u001b[0m         all_keys = [\n\u001b[1;32m    843\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkeys\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_KEY_TYPES\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhas_index_for\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/gensim/models/keyedvectors.py\u001b[0m in \u001b[0;36mget_mean_vector\u001b[0;34m(self, keys, weights, pre_normalize, post_normalize, ignore_missing)\u001b[0m\n\u001b[1;32m    516\u001b[0m                 \u001b[0mtotal_weight\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    517\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mignore_missing\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 518\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Key '{key}' not present in vocabulary\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    519\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    520\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtotal_weight\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"Key 'pimmel' not present in vocabulary\""
-     ]
-    }
-   ],
-   "source": [
-    "ergebnisse = model.wv.most_similar(name, topn=5)\n",
-    "\n",
-    "for y in ergebnisse:\n",
-    "    print(y)"
    ]
   }
  ],
