--- a/levenshtein_lcs.ipynb
+++ b/levenshtein_lcs.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNoP0RS2i6a0CcYdK8JTLoO",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/j0si/fuzzy_sanctions/blob/main/levenshtein_lcs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -78,9 +62,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "levenshteinDistanceDP('hello','kelm')"
-      ],
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,11 +70,10 @@
         "id": "WHnClyFuQAWf",
         "outputId": "9f4d3692-deee-47b9-d923-3ddde99d79b2"
       },
-      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0 1 2 3 4 \n",
             "1 1 2 3 4 \n",
@@ -103,28 +84,36 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "3.0"
             ]
           },
+          "execution_count": 32,
           "metadata": {},
-          "execution_count": 32
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "levenshteinDistanceDP('hello','kelm')"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "yK-UePlTPBTA"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {
+        "id": "x6iOLfYhOjpI"
+      },
+      "outputs": [],
       "source": [
         "def calcDictDistance(word, numWords):\n",
         "    # reaad in all names from df\n",
@@ -152,24 +141,46 @@
         "        wordDetails = currWordDist.split(\"-\")\n",
         "        closestWords.append(wordDetails[1])\n",
         "    return closestWords"
-      ],
-      "metadata": {
-        "id": "x6iOLfYhOjpI"
-      },
-      "execution_count": 29,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "s-ipG8EOQxrp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cIZa2ANAQyOX",
+        "outputId": "579c3fd6-1aef-4a3b-a26b-3fe3b8a8c4a0"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "pauline\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# longest common substring\n",
         "\n",
@@ -199,43 +210,39 @@
         "    print(s)\n",
         "\n",
         "len(s)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cIZa2ANAQyOX",
-        "outputId": "579c3fd6-1aef-4a3b-a26b-3fe3b8a8c4a0"
-      },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "pauline\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "7"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "FZg-3uXAOnWa"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNoP0RS2i6a0CcYdK8JTLoO",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "864e1f20dbb28239d950687f39028fbb4c0d085af87de4b77635b27f74266f13"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
